# nonebot-plugin-error-alert

./: .gitignore  README.md  bot.py  pyproject.toml
nonebot_plugin_error_alert/: __init__.py  alert.py  config.py  matcher.py  subscribe.py
nonebot_plugin_test_error_alert/: __init__.py
